Login and register buttons disabled until form is valid

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -103,6 +103,7 @@
                   type="button"
                   (click)="logIn(loginForm)"
                   class="btn btn-primary my-4"
+                  [disabled]="!loginForm.valid"
                 >
                   Ingresar
                 </button>
