--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -46,11 +46,7 @@
               </div>
               <div *ngIf="!isTeacher">
                 <p class="card-text">Bienvenido nuevo ALUMNOS a Learning Peru, obtendras muchos beneficios si te registras</p>
-              </div>
-
-
-
-              
+              </div> 
               
             </div>
             
@@ -69,25 +65,15 @@
     <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
-          <form name="registerForm" #registerForm="ngForm" >
+          <form  name="registerForm" #registerForm="ngForm">
             <div class="form-group" >
-
-             
-
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"
                     ><i class="ni ni-hat-3"></i
                   ></span>
                 </div>
-                <input
-                  class="form-control"
-                  placeholder="Nombre"
-                  [(ngModel)]="registerObj.name"
-                  name="name"
-                  #name="ngModel"
-                  required
-                />
+                <input required class="form-control" placeholder="Nombre" [(ngModel)]="registerObj.name" name="name" #name="ngModel" >
               </div>
             </div>
             <div class="form-group">
@@ -220,23 +206,6 @@
                 />
               </div>
             </div>
-            <!--<div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"
-                    ><i class="ni ni-map-big"></i
-                  ></span>
-                </div>
-                <input
-                  class="form-control"
-                  placeholder="País"
-                  [(ngModel)]="registerObj.country"
-                  name="country"
-                  #name="ngModel"
-                  required
-                />
-              </div>
-            </div>-->
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
@@ -251,6 +220,7 @@
                   name="password"
                   #name="ngModel"
                   type="password"
+                  required
                 />
               </div>
             </div>
@@ -259,6 +229,7 @@
                 type="button"
                 (click)="regClick(registerForm)"
                 class="btn btn-primary mt-4"
+                [disabled]="!registerForm.valid"
               >
                 Crear una cuenta
               </button>
