--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -81,22 +81,22 @@
                 </label>
               </div>-->
               <div class="row mt-3">
-                <div class="col-6">
+                <!-- <div class="col-6">
                   <a 
                     href="javascript:void(0)" 
                     class="text-primary"
                     (click)="sendMail()"
                     ><small>Olvidé mi clave</small></a
                   >
-                </div>
-                <div class="col-6 text-primary">
+                </div> -->
+                <!-- <div class="col-6 text-primary">
                   <a
                     [routerLink]="['/register']"
                     href="javascript:void(0)"
                     class="text-b"
                     ><small>Crear nueva cuenta</small></a
                   >
-                </div>
+                </div> -->
               </div>
               <div class="text-center">
                 <button
