--- a/src/app/pages/materials/materials.component.html
+++ b/src/app/pages/materials/materials.component.html
@@ -170,7 +170,8 @@
                 <div class="form-group">
                   <div class="text-center" *ngIf="!select1()">
                     <a type="button" (click)="change1()" class="btn btn-success">
-                      Archivo
+                      Agregar Archivo
+
                     </a>
                     <a type="button" (click)="change1_2()" class="btn btn-danger ">
                       Link Youtube
@@ -187,7 +188,8 @@
 
                   <div class="text-center" *ngIf="!select2()">
                     <a type="button" (click)="change2()" class="btn btn-success">
-                      Archivo
+                      Agregar Archivo
+
                     </a>
                     <a type="button" (click)="change2_2()" class="btn btn-danger ">
                       Link Youtube
@@ -203,7 +205,8 @@
                 <div class="form-group" *ngIf="thirdDiv()">
                   <div class="text-center" *ngIf="!select3()">
                     <a type="button" (click)="change3()" class="btn btn-success">
-                      Archivo
+                      Agregar Archivo
+
                     </a>
                     <a type="button" (click)="change3_2()" class="btn btn-danger ">
                       Link Youtube
@@ -218,7 +221,8 @@
                 <div class="form-group" *ngIf="fouthDiv()">
                   <div class="text-center" *ngIf="!select4()">
                     <a type="button" (click)="change4()" class="btn btn-success">
-                      Archivo
+                      Agregar Archivo
+
                     </a>
                     <a type="button" (click)="change4_2()" class="btn btn-danger ">
                       Link Youtube
@@ -232,7 +236,7 @@
                 <div class="form-group" *ngIf="fifthDiv()">
                   <div class="text-center" *ngIf="!select5()">
                     <a type="button" (click)="change5()" class="btn btn-success">
-                      Archivo
+                      Agregar Archivo
                     </a>
                     <a type="button" (click)="change5_2()" class="btn btn-danger ">
                       Link Youtube
@@ -279,15 +283,7 @@
                   <label>
                     Descripción del material:
                   </label>
-                  <h3>{{currentupload.descripcion}}</h3>
-  
-              
-               
-                <label>
-                  Sube un material:
-                </label>
-                
-                
+                  <h3>{{currentupload.descripcion}}</h3>          
   
               </div>
               
